testsuite/positive/CompilerEventsTest.n
// REFERENCE: CompilerEventsMacroLib.dll

using System.Console;
using CompilerEventsMacro;

[Macro1]
public class A {}

[Macro1]
public class B {}

public class C {}

[Macro1]
module Program
{
  Main() : void
  {
    WriteLine(Method());
  }
}

/*
BEGIN-OUTPUT
A, B, Program
END-OUTPUT
*/
