testsuite/negative/pinvoke-2.n
using System;
using System.Reflection;
using System.Runtime.InteropServices;


public module Program
{
  [DllImport(1)] //E: constant expression .* required
  public extern Foo1() : void;
}
